--- a/projects/01_fyyur/end_code/requirements.txt
+++ b/projects/01_fyyur/end_code/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.3
 appdirs==1.4.3
+Babel==2.8.0
 CacheControl==0.12.6
 certifi==2019.11.28
 chardet==3.0.4
@@ -13,6 +14,7 @@ Flask-Cors==3.0.9
 Flask-Migrate==2.5.3
 Flask-Moment==0.10.0
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
@@ -30,6 +32,7 @@ pyparsing==2.4.6
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytoml==0.1.21
+pytz==2020.1
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
@@ -37,3 +40,4 @@ SQLAlchemy==1.3.19
 urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
+WTForms==2.3.3
